--- a/price-service.properties
+++ b/price-service.properties
@@ -6,9 +6,9 @@ management.endpoints.web.exposure.include=*
 #MYSQL DB Properties
 #=====================
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/product
+spring.datasource.url=jdbc:mysql://localhost:3306/product_service1
 spring.datasource.username=root
-#spring.datasource.password=root1234
+spring.datasource.password=root
 
 #JPA Properties
 spring.jpa.hibernate.ddl-auto=update
