--- a/redis-db.properties
+++ b/redis-db.properties
@@ -1,2 +1,6 @@
+spring.cloud.config.uri=http://localhost:8888 
+spring.application.name=redis-db 
+management.security.enabled=false
+management.endpoints.web.exposure.include=*
 spring.redis.url=redis://3232ece5b4d94ef3bead46c746619df4@us1-equal-satyr-30710.lambda.store:30710
 server.port=8083
