--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Rabbit MQ Configuration
-spring.rabbitmq.addresses=amqp://wolsyxej:L7rGED4yQIW9fGS-tiRKNKsGu0pTXlpQ@finch.rmq.cloudamqp.com/wolsyxej
+spring.rabbitmq.addresses=amqps://dspymxwp:DNlr0Ffk8jAKfy6zbKHpcLP1DSKSaAzA@finch.rmq.cloudamqp.com/dspymxwp
 #Turn ON Spring Security to protect actuators endpoints
 management.endpoints.web.exposure.include=*
 management.security.enabled=false
