--- a/priceService.properties
+++ b/priceService.properties
@@ -1,3 +1,4 @@
 spring.rabbitmq.addresses=amqps://dspymxwp:DNlr0Ffk8jAKfy6zbKHpcLP1DSKSaAzA@finch.rmq.cloudamqp.com/dspymxwp
-
+originairports.shutdown=CHENNAI
+destinationairports.shutdown=CHENNAI
 eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
