--- a/ribbon-orderService.properties
+++ b/ribbon-orderService.properties
@@ -1,3 +1,4 @@
+spring.redis.url=redis://3232ece5b4d94ef3bead46c746619df4@us1-equal-satyr-30710.lambda.store:30710
 server.port=1111
 management.endpoints.web.exposure.include=*
 spring.cloud.config.uri=http://localhost:8888
