--- a/ribbon-orderService.properties
+++ b/ribbon-orderService.properties
@@ -4,3 +4,9 @@ management.endpoints.web.exposure.include=*
 spring.cloud.config.uri=http://localhost:8888
 management.security.enabled=false
 price-proxy.ribbon.listOfServers=localhost:2222, localhost:2223, localhost:2224, localhost:2225,localhost:2226
+#MYSQL DB Properties
+#=====================
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/product_service1
+spring.datasource.username=root
+spring.datasource.password=root
