--- a/price-service.properties
+++ b/price-service.properties
@@ -16,3 +16,9 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+
+spring.rabbitmq.addresses=amqps://dspymxwp:DNlr0Ffk8jAKfy6zbKHpcLP1DSKSaAzA@finch.rmq.cloudamqp.com/dspymxwp
+originairports.shutdown=CHENNAI
+destinationairports.shutdown=CHENNAI
+eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
