--- a/redis-db.properties
+++ b/redis-db.properties
@@ -4,3 +4,6 @@ management.security.enabled=false
 management.endpoints.web.exposure.include=*
 spring.redis.url=redis://3232ece5b4d94ef3bead46c746619df4@us1-equal-satyr-30710.lambda.store:30710
 server.port=8083
+
+spring.rabbitmq.addresses=amqps://dspymxwp:DNlr0Ffk8jAKfy6zbKHpcLP1DSKSaAzA@finch.rmq.cloudamqp.com/dspymxwp
+eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
